@@ -420,6 +420,7 @@ defaults {
                 moderators = umichReceiveDisallowedMessages;
                 permitted_domains = umichPermittedSendersDomains;
                 permitted_senders = umichPermittedSenders;
+                additional_acls_flag = RealtimeBlockList;
                 request = [ * ];
             }
             bind {
@@ -530,8 +531,6 @@ domain "localhost.DEFAULT" {
 #               uri = "ldap:///ou=People,dc=umich,dc=edu?*?sub?cn=%25s"
 #               type = user;
 #           }
-#           # List of attributes to retrieve; if not set, all attributes are
-#           # requested.
 #           attributes {
 #               request = [];
 #               mail = mail
