@@ -4,6 +4,8 @@
       searches
     - removed ancient, unused group forwarding experiment
     - removed deprecated DNSL and vacation aliases
+    - added configuration option for the LDAP attribute used to enable
+      additional ACLs
 
 2.3.0 (2023-03-21)
     - fixed memory leak and logging problem in ACL code
